# listailor

./: .gitignore  README.md
.github/workflows/: deploy.yml
backend/: Dockerfile  docker-compose.yml  main.py  pyproject.toml  settings.py
backend/cart/: jumbo_api.py
backend/parser/: .gitignore  main.py
backend/routers/: items.py  jumbo_carts.py
backend/scoring/: dump.json  embeddings.py  failed_items.json  format_jumbo_data.py  items.json  items_mini.json  items_uploader.py  main.py  openai_scoring.py  results.json  working_urls.txt
backend/scrapper/: .gitignore  main.py  product_category_links.txt
backend/services/: __init__.py  openai_service.py  supabase_service.py
frontend/: components.json  next.config.mjs  package.json  tailwind.config.js  vercel.json
frontend/src/api/: index.js  lists.js  search.js  useProductSuggestions.js  useSearch.js
frontend/src/components/: PostHogProvider.tsx
frontend/src/components/svgs/: Switch.jsx
frontend/src/components/ui/: BoxPlot.jsx  CartProductCard.jsx  CredentialsDrawer.jsx  JumboSpinner.jsx  ListCard.jsx  ListProductsReasonsDrawer.jsx  LoadingSpinner.jsx  ProductCard.jsx  ProductSuggestionsDrawer.jsx  RadialChart.js  ScoreBadge.jsx  SearchBar.jsx  SelectProductDrawer.jsx  button.jsx  chart.jsx  drawer.jsx  input.jsx
frontend/src/contexts/: ListsContext.js
frontend/src/lib/: utils.js
frontend/src/pages/: _app.js  _document.js  cart.jsx  checkout.jsx  index.jsx
frontend/src/styles/: globals.css
scripts/: deploy-server.sh  deploy.sh
