[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
supabase = "^2.7.3"
fastapi = {extras = ["standard"], version = "^0.112.1"}
blinker = "1.7.0"
beautifulsoup4 = "^4.12.3"
openai = "^1.42.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
pydantic-settings = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"